--- a/.github/workflows/frontend-vercel.yml
+++ b/.github/workflows/frontend-vercel.yml
@@ -47,12 +47,11 @@ jobs:
   deploy:
     name: Deploy to Vercel
     needs: build
-    # Only attempt deploy if all Vercel secrets are present
-    if: ${{ secrets.VERCEL_TOKEN != '' && secrets.VERCEL_ORG_ID != '' && secrets.VERCEL_PROJECT_ID != '' }}
     runs-on: ubuntu-latest
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
     defaults:
       run:
         working-directory: apps/frontend
@@ -68,11 +67,17 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel@latest
 
+      - name: Validate secrets present
+        run: |
+          if [ -z "${VERCEL_TOKEN}" ] || [ -z "${VERCEL_ORG_ID}" ] || [ -z "${VERCEL_PROJECT_ID}" ]; then
+            echo "Missing one or more Vercel secrets; skipping deploy." && exit 78
+          fi
+
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token "${{ secrets.VERCEL_TOKEN }}"
+        run: vercel pull --yes --environment=production --token "$VERCEL_TOKEN"
 
       - name: Build (Vercel)
-        run: vercel build --prod --token "${{ secrets.VERCEL_TOKEN }}"
+        run: vercel build --prod --token "$VERCEL_TOKEN"
 
       - name: Deploy (Vercel)
-        run: vercel deploy --prebuilt --prod --token "${{ secrets.VERCEL_TOKEN }}"
+        run: vercel deploy --prebuilt --prod --token "$VERCEL_TOKEN"
