chore(frontend): remove legacy debug credits page

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -35,3 +35,14 @@ PYTHONDONTWRITEBYTECODE=1
 # Do NOT put real keys here. Set them in your hosting provider's env vars.
 STRIPE_SECRET_KEY="__SET_IN_DEPLOYMENT__"
 STRIPE_WEBHOOK_SECRET="__SET_IN_DEPLOYMENT__"
+
+# Stripe price→credits mapping (Phase 5)
+# Either provide a JSON object mapping price_id to credit amount:
+# STRIPE_PRICE_TO_CREDITS_JSON="{\"price_abc\":100,\"price_def\":500}"
+# Or define individual known price IDs and their credit values:
+# STRIPE_PRICE_SMALL_ID="price_small"
+# STRIPE_PRICE_SMALL_CREDITS=100
+# STRIPE_PRICE_MEDIUM_ID="price_medium"
+# STRIPE_PRICE_MEDIUM_CREDITS=500
+# STRIPE_PRICE_LARGE_ID="price_large"
+# STRIPE_PRICE_LARGE_CREDITS=1500
