--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,7 +21,8 @@
     "jsdom": "^26.1.0",
     "lucide-react": "^0.501.0",
     "motion": "^12.7.4",
-    "next": "15.3.0",
+  "next": "15.3.0",
+  "stripe": "^16.6.0",
     "next-intl": "^3.26.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
