chore(frontend): remove nested apps/ and legacy debug/credits; configure Vercel to build apps/frontend

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,6 @@
-{}
+{
+	"framework": "nextjs",
+	"installCommand": "cd apps/frontend && npm ci",
+	"buildCommand": "cd apps/frontend && npm run build",
+	"outputDirectory": "apps/frontend/.next"
+}
