chore(vercel): use @vercel/next builder for apps/frontend subdir to fix install path

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-	"framework": "nextjs",
-	"installCommand": "cd apps/frontend && npm ci",
-	"buildCommand": "cd apps/frontend && npm run build",
-	"outputDirectory": "apps/frontend/.next"
+	"builds": [
+		{ "src": "apps/frontend/package.json", "use": "@vercel/next" }
+	]
 }
