--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "test": "jest --runInBand",
+  "test": "jest --runInBand",
+  "e2e": "playwright test",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -34,6 +35,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.48.2",
+  "@sentry/nextjs": "^8.33.1",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
