chore(vercel): update frontend lockfile and set installCommand to use apps/frontend

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
 	"builds": [
 		{ "src": "apps/frontend/package.json", "use": "@vercel/next" }
-	]
+	],
+	"installCommand": "cd apps/frontend && npm ci"
 }
