--- a/apps/backend/Procfile
+++ b/apps/backend/Procfile
@@ -1,1 +1,1 @@
-web: uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
+web: gunicorn -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:${PORT:-8000} --timeout 120 --keep-alive 75 --workers ${WEB_CONCURRENCY:-2}
