--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,7 +21,8 @@
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.501.0",
-    "motion": "^12.7.4",
+  "motion": "^12.7.4",
+  "openai": "^4.58.1",
   "next": "15.3.0",
   "stripe": "^16.12.0",
     "next-intl": "^3.26.5",
