--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,12 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-  "test": "jest --runInBand",
-  "e2e": "playwright test",
+    "test": "jest --runInBand",
+    "e2e": "playwright test",
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.31.4",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -21,13 +20,14 @@
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.501.0",
-  "motion": "^12.7.4",
-  "openai": "^4.58.1",
-  "next": "15.3.0",
-  "stripe": "^16.12.0",
+    "motion": "^12.7.4",
+    "next": "15.3.0",
+    "next-auth": "^4.24.11",
     "next-intl": "^3.26.5",
+    "openai": "^4.58.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^16.12.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.48.2",
-  "@sentry/nextjs": "^8.33.1",
+    "@sentry/nextjs": "^8.33.1",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
