feat(auth): migrate from Clerk to NextAuth v5 (Google only)

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "devDependencies": {
         "concurrently": "^9.1.2",
         "openapi-typescript": "^7.4.4"
+    },
+    "dependencies": {
+        "next-auth": "^4.24.11"
     }
 }
