--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.4",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -22,7 +23,6 @@
     "lucide-react": "^0.501.0",
     "motion": "^12.7.4",
     "next": "15.3.0",
-    "next-auth": "^4.24.11",
     "next-intl": "^3.26.5",
     "openai": "^4.58.1",
     "react": "^19.0.0",
@@ -35,6 +35,7 @@
     "node": ">=18 <=22"
   },
   "devDependencies": {
+  "@clerk/testing": "^1.12.1",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.48.2",
     "@sentry/nextjs": "^8.33.1",
