--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -27,6 +27,7 @@
     "openai": "^4.58.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resume-matcher": "file:../..",
     "stripe": "^16.12.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
@@ -35,7 +36,7 @@
     "node": ">=18 <=22"
   },
   "devDependencies": {
-  "@clerk/testing": "^1.12.1",
+    "@clerk/testing": "^1.12.1",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.48.2",
     "@sentry/nextjs": "^8.33.1",
