--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,7 +12,6 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.31.4",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -23,6 +22,7 @@
     "lucide-react": "^0.501.0",
     "motion": "^12.7.4",
     "next": "15.3.0",
+    "next-auth": "^5.0.0-beta.22",
     "next-intl": "^3.26.5",
     "openai": "^4.58.1",
     "react": "^19.0.0",
@@ -36,7 +36,6 @@
     "node": ">=18 <=22"
   },
   "devDependencies": {
-    "@clerk/testing": "^1.12.1",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.48.2",
     "@sentry/nextjs": "^8.33.1",
