Fix Vercel deployment hang by removing problematic dependencies
- Remove unused local file dependency 'resume-matcher' from frontend
- Update root package.json to use NextAuth v5.0.0-beta.22 for consistency
- Regenerate package-lock.json with clean dependency tree (964 packages)
- Eliminates memory issues and timeouts during npm ci on Vercel

--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
         "openapi-typescript": "^7.4.4"
     },
     "dependencies": {
-        "next-auth": "^4.24.11"
+        "next-auth": "^5.0.0-beta.22"
     }
 }
