--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -63,6 +63,7 @@ dependencies = [
     # Dev / lint (optional install in CI or local):
     "ruff==0.5.7",
     "mypy==1.13.0",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [build-system]
