feat: Add production configuration with Neon PostgreSQL support
✅ Production Environment Setup:
- Generated secure AUTH_SECRET for production
- Created .env.production templates for frontend/backend
- Configured Neon PostgreSQL for production database
- Added comprehensive production deployment guide

🔧 Configuration Details:
- Frontend: NextAuth.js with production AUTH_SECRET
- Backend: Neon PostgreSQL connection with SSL
- Security: Production-ready CORS and security headers
- Documentation: Complete deployment guide with verification steps

🚀 Ready for Production:
- No SQLite in production (Neon PostgreSQL only)
- All environment variables documented
- Database migration instructions included
- Health checks and verification steps provided

--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -64,6 +64,8 @@ dependencies = [
     "ruff==0.5.7",
     "mypy==1.13.0",
     "psycopg2-binary>=2.9.10",
+    "psycopg[binary]>=3.2.9",
+    "asyncpg>=0.30.0",
 ]
 
 [build-system]
