feat: Complete PostgreSQL-only configuration for consistent dev/prod
🔧 Database Configuration:
- Removed all SQLite fallbacks and dependencies
- PostgreSQL-only database engine with psycopg/asyncpg drivers
- Neon Local Connect configuration for development
- Production-ready Neon PostgreSQL setup

📁 Environment Files:
- .env.development: Neon Local Connect (localhost:5432)
- .env.production: Neon cloud database configuration
- PostgreSQL connection string validation and conversion

🧪 Testing Framework:
- PostgreSQL-only test configuration (pytest.ini)
- Test database with automatic setup/teardown
- JSONB test utilities and PostgreSQL-specific helpers

📋 Migration & Setup:
- setup_postgres.py: Automated PostgreSQL database setup
- Example migration with JSONB, indexes, triggers, constraints
- Neon setup documentation with Local Connect workflow

✅ Key Features:
- JSONB columns for flexible structured data
- Full-text search indexes (GIN)
- PostgreSQL constraints and triggers
- Connection pooling and SSL configuration
- Consistent postgres:// URL format throughout

🎯 Result: Zero SQLite dependencies - 100% PostgreSQL consistency

--- a/apps/backend/pytest.ini
+++ b/apps/backend/pytest.ini
@@ -1,3 +1,25 @@
 [pytest]
-addopts = -q
-# Removed deprecated/unknown anyio_backend option; we explicitly mark async tests with pytest.mark.asyncio.
+addopts = -q --tb=short
+# PostgreSQL-only testing configuration
+testpaths = tests
+python_files = test_*.py
+python_functions = test_*
+python_classes = Test*
+
+# Environment variables for PostgreSQL testing
+env = 
+    DATABASE_URL=postgresql+asyncpg://postgres:password@localhost:5432/resume_matcher_test
+    SYNC_DATABASE_URL=postgresql+psycopg://postgres:password@localhost:5432/resume_matcher_test
+    ASYNC_DATABASE_URL=postgresql+asyncpg://postgres:password@localhost:5432/resume_matcher_test
+    DB_ECHO=false
+    ENVIRONMENT=testing
+    DEBUG=false
+
+# Async testing support
+asyncio_mode = auto
+
+# Test markers
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
