--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = "Resume Matcher Backend API"
 requires-python = ">=3.12"
 dependencies = [
-    "aiosqlite==0.21.0",
     "annotated-types==0.7.0",
     "anyio==4.9.0",
     "beautifulsoup4==4.13.4",
@@ -58,14 +57,16 @@ dependencies = [
     "typing_extensions==4.13.1",
     "urllib3==2.4.0",
     "uvicorn==0.34.0",
+    # PostgreSQL-only dependencies (no SQLite)
+    "psycopg2-binary>=2.9.10",
+    "psycopg[binary]>=3.2.9", 
+    "asyncpg>=0.30.0",
+    # Testing dependencies
     "pytest==8.2.2",
     "pytest-asyncio==0.23.7",
-    # Dev / lint (optional install in CI or local):
+    # Dev / lint dependencies
     "ruff==0.5.7",
     "mypy==1.13.0",
-    "psycopg2-binary>=2.9.10",
-    "psycopg[binary]>=3.2.9",
-    "asyncpg>=0.30.0",
 ]
 
 [build-system]
