feat: complete migration from Clerk to NextAuth.js and SQLite to PostgreSQL
- Authentication system migration:
  * Removed all Clerk dependencies and environment variables
  * Implemented NextAuth.js v5 for authentication
  * Updated auth.ts configuration for Google OAuth
  * Modified auth middleware and JWT token handling
  * Updated API routes to use NextAuth session tokens

- Database migration:
  * Migrated from SQLite to PostgreSQL for all environments
  * Updated connection strings and database configuration
  * Modified models to use user_id instead of clerk_user_id
  * Updated Alembic migrations for PostgreSQL
  * Removed SQLite-specific code and dependencies

- Code updates:
  * Updated all service classes to use user_id
  * Modified API endpoints and webhooks
  * Updated test files and configurations
  * Changed documentation to reflect new architecture

- Configuration updates:
  * Updated environment variable examples
  * Modified deployment configurations
  * Updated Docker Compose for PostgreSQL
  * Updated CI/CD pipeline configurations

This completes the modernization of the authentication and database systems.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -53,12 +53,12 @@ jobs:
           E2E_TEST_MODE: '1'
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: '1'
           NEXT_PUBLIC_SITE_URL: ${{ secrets.NEXT_PUBLIC_SITE_URL }}
-          NEXT_PUBLIC_CLERK_JWT_TEMPLATE: ${{ secrets.NEXT_PUBLIC_CLERK_JWT_TEMPLATE }}
-          # Clerk
-          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
-          CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
-          E2E_CLERK_EMAIL: ${{ secrets.E2E_CLERK_EMAIL }}
-          E2E_CLERK_PASSWORD: ${{ secrets.E2E_CLERK_PASSWORD }}
+          NEXT_PUBLIC_NEXTAUTH_JWT_TEMPLATE: ${{ secrets.NEXT_PUBLIC_NEXTAUTH_JWT_TEMPLATE }}
+          # NextAuth
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
+          E2E_TEST_EMAIL: ${{ secrets.E2E_TEST_EMAIL }}
+          E2E_TEST_PASSWORD: ${{ secrets.E2E_TEST_PASSWORD }}
           # Stripe
           STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
           NEXT_PUBLIC_STRIPE_PRICE_SMALL: ${{ secrets.NEXT_PUBLIC_STRIPE_PRICE_SMALL }}
