--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,9 @@ services:
       # Stripe
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
       STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
-      # Clerk
-      CLERK_PUBLISHABLE_KEY: ${CLERK_PUBLISHABLE_KEY}
-      CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
+      # NextAuth.js
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      NEXTAUTH_URL: ${NEXTAUTH_URL}
       # App
       ALLOWED_ORIGINS: '["http://localhost:3000"]'
       DISABLE_BACKGROUND_TASKS: 'true'
@@ -57,8 +57,8 @@ services:
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000
       NEXT_PUBLIC_ENABLE_SW: '0'
-      # Clerk (browser)
-      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${CLERK_PUBLISHABLE_KEY}
+      # NextAuth.js (client-side)
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       # Stripe (browser & server routes)
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
       NEXT_PUBLIC_STRIPE_PRICE_SMALL: ${NEXT_PUBLIC_STRIPE_PRICE_SMALL}
