🔧 FIX: Update Dockerfile and render.yaml for UV package manager
✅ Docker Configuration:
   • Replace requirements.txt with pyproject.toml + uv.lock
   • Install UV for fast dependency management
   • Use 'uv sync --frozen' for reproducible builds
   • Update WORKDIR sequence for proper context

✅ Render Deployment:
   • Update preDeployCommand to use 'uv run alembic'
   • Update dockerCommand to use 'uv run python serve.py'
   • Maintain proper working directory context

🎯 This fixes the deployment error: requirements.txt not found
Backend will now build successfully with the new UV-based setup.

--- a/render.yaml
+++ b/render.yaml
@@ -12,11 +12,11 @@ services:
 
     # Run Alembic migrations before each deploy
     preDeployCommand: >-
-      python -c "import sys; from alembic.config import main; sys.argv=['alembic','-c','/app/apps/backend/alembic.ini','upgrade','head']; raise SystemExit(main())"
+      cd /app/apps/backend && uv run alembic upgrade head
 
-    # Start FastAPI via Uvicorn, binding to Render's $PORT
+    # Start FastAPI via Uvicorn using UV, binding to Render's $PORT
     dockerCommand: >-
-      python /app/apps/backend/serve.py
+      cd /app/apps/backend && uv run python serve.py
 
     # Health check for zero-downtime deploys
     healthCheckPath: /healthz
