--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-uv.lock
+# uv.lock  # Commented out - we need uv.lock for Docker builds
 
 # SQLite databases
 *.sqlite3
