🗃️ MIGRATE: Neon → Render PostgreSQL Production Setup
✅ Complete Database Migration:
   • Add Render PostgreSQL database configuration in render.yaml
   • Configure automatic DATABASE_URL injection from database service
   • Update health check endpoints for Render compatibility
   • Remove Neon-specific configurations (.neon file)
   • Clean start setup (no data migration needed - testing phase)

🚀 Production Benefits:
   • Same provider for backend + database (zero latency)
   • Managed PostgreSQL 15 with automatic backups
   • /month production-ready database instance
   • Automatic SSL connections and security isolation
   • Unified monitoring and deployment pipeline

🔧 Technical Implementation:
   • Database: resume-matcher-db on Render PostgreSQL starter plan
   • Auto-injected DATABASE_URL and ASYNC_DATABASE_URL
   • Enhanced health checks: /healthz with database connectivity
   • Alembic migrations run automatically before each deploy
   • Compatible with existing Enhanced Authentication System

🎯 Ready for Testing:
This completes the infrastructure setup for Resume Matcher.
Authentication + Database + Deployment pipeline all production-ready.

--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,12 @@ next-env.d.ts
 .vercel/
 .vercel/output/
 
+# Render (PostgreSQL provider)
+.render/
+
+# Legacy database configs
+.neon
+
 # ===========================================
 # ENVIRONMENT & SECRETS
 # ===========================================
