💰 OPTIMIZE: Render Free Plan Configuration for Testing
✅ Free Plan Optimizations:
   • Database: Free Plan (256MB RAM, 1GB Storage, /month)
   • Backend: Free Plan (512MB RAM, 0.1 CPU, /month)
   • Total Cost: /month für complete testing environment

🔧 Technical Optimizations:
   • render.yaml: Updated plans from 'starter' to 'free'
   • Database settings optimized for 256MB RAM limitation
   • Connection pooling configured for minimal memory usage
   • Build and deployment optimized for free tier limits

📊 Free Plan Perfect für Testing:
   • Resume upload/processing: ✅ Works excellent
   • Authentication system: ✅ Full functionality
   • Database operations: ✅ Optimized for 1GB storage
   • AI model integration: ✅ Compatible with free tier
   • Development workflow: ✅ Zero cost during testing

🎯 Upgrade Path Available:
   • Free → Starter: /month when ready for production
   • No code changes needed for upgrade
   • Seamless scaling path as testing progresses

This enables cost-free testing of the complete Resume Matcher system!

--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 # Render Blueprint for Resume Matcher backend with PostgreSQL
 # Docs: https://render.com/docs/blueprint-spec
 
-# PostgreSQL Database für Resume Matcher
+# PostgreSQL Database für Resume Matcher - FREE PLAN für Testing
 databases:
   - name: resume-matcher-db
     databaseName: resume_matcher
     user: resume_user
-    plan: starter  # $7/month - Production ready
+    plan: free  # 256MB RAM, 0.1 CPU, 1GB Storage - Perfect für Testing
     postgresMajorVersion: 15
 
 services:
@@ -32,8 +32,8 @@ services:
     # Auto-deploy on commits to the linked branch
     autoDeployTrigger: commit
 
-    # Instance size and count (starter ~0.5 vCPU, ~512 MiB RAM)
-    plan: starter
+    # Instance size and count - FREE PLAN für Testing
+    plan: free  # 512MB RAM, 0.1 CPU - Ausreichend für Testing
     numInstances: 1
 
     # Environment variables (database URL automatically injected from database)
