🔧 Add database diagnostic + enhanced startup logging
- Add scripts/diagnose_database.py for DATABASE_URL debugging
- Enhanced serve.py with startup diagnostic
- Improved render.yaml with PostgreSQL Free Plan configuration
- DATABASE_URL auto-injection from resume-matcher-db
- Fallback configuration for troubleshooting

This will help identify why backend still connects to Neon instead of Render PostgreSQL

--- a/render.yaml
+++ b/render.yaml
@@ -48,6 +48,10 @@ services:
           name: resume-matcher-db
           property: connectionString
       
+      # Fallback DATABASE_URL (if automatic injection fails)
+      - key: FALLBACK_DATABASE_URL
+        sync: false  # Set manually in dashboard if needed
+      
       # Session und Auth
       - key: SESSION_SECRET_KEY
         sync: false  # Set in dashboard
