--- a/render.yaml
+++ b/render.yaml
@@ -48,9 +48,13 @@ services:
           name: resume-matcher-db
           property: connectionString
       
-      # Fallback DATABASE_URL (if automatic injection fails)
+      # Emergency fallback for manual configuration
       - key: FALLBACK_DATABASE_URL
-        sync: false  # Set manually in dashboard if needed
+        sync: false  # Set manually in dashboard if auto-injection fails
+      
+      # Manual override for testing (leave empty if auto-injection works)
+      - key: MANUAL_DATABASE_URL
+        sync: false  # For manual database URL override
       
       # Session und Auth
       - key: SESSION_SECRET_KEY
