CRITICAL FIX: Stripe API version - Replace invalid 2024-12-18 with valid 2023-10-16
- Fix frontend checkout route API version
- Fix frontend portal route API version
- Fix backend billing service API version
- Add missing Stripe dependency to backend
- Resolves payment system failure blocking all revenue

Files changed:
- apps/frontend/app/api/stripe/checkout/route.ts
- apps/frontend/app/api/stripe/portal/route.ts
- apps/backend/app/services/billing_service.py
- apps/backend/pyproject.toml

This fixes the 'Invalid Stripe API version: 2024-12-18' error
that was preventing credit purchases in production.

--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -57,6 +57,8 @@ dependencies = [
     "typing_extensions==4.13.1",
     "urllib3==2.4.0",
     "uvicorn==0.34.0",
+    # Stripe dependencies
+    "stripe>=7.0.0,<8.0.0",
     # PostgreSQL-only dependencies
     "psycopg2-binary>=2.9.10",
     "psycopg[binary]>=3.2.9",
