--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -57,6 +57,8 @@ dependencies = [
     "typing_extensions==4.13.1",
     "urllib3==2.4.0",
     "uvicorn==0.34.0",
+    # Production server dependencies
+    "gunicorn>=21.0.0,<22.0.0",
     # Stripe dependencies
     "stripe>=7.0.0,<8.0.0",
     # PostgreSQL-only dependencies
