🚨 EMERGENCY STRIPE DEPLOYMENT FIX
✅ FIXES PRODUCTION ISSUE: Stripe module not available
- ➕ Added requirements.txt with explicit Stripe dependency
- 🔧 Modified Dockerfile to use pip instead of uv for reliability
- 🐳 Updated render.yaml to use traditional Python execution
- 🛠️ Added emergency diagnostic script for Stripe verification

🎯 PROBLEM: Production logs show 'Stripe module not available'
🔧 SOLUTION: Switch from uv to pip installation in Docker
📊 IMPACT: Should resolve webhook signature verification failures

TEST: Deploy and monitor webhook endpoint for Stripe availability

--- a/render.yaml
+++ b/render.yaml
@@ -20,11 +20,11 @@ services:
 
     # Run Alembic migrations before each deploy
     preDeployCommand: >-
-      cd /app/apps/backend && uv run alembic upgrade head
+      cd /app/apps/backend && python -m alembic upgrade head
 
-    # Start FastAPI via Uvicorn using UV, binding to Render's $PORT
+    # Start FastAPI via Uvicorn using traditional Python, binding to Render's $PORT
     dockerCommand: >-
-      cd /app/apps/backend && uv run python serve.py
+      cd /app/apps/backend && python serve.py
 
     # Health check for zero-downtime deploys
     healthCheckPath: /healthz
