feat: Production-Ready Credits System Implementation
 Complete production credits system with comprehensive testing and validation

## Core Implementation
-  Database: 7 production models with proper relationships
-  Services: Async payment processing with Stripe integration
-  Security: Webhook validation and idempotency protection
-  Testing: 22 comprehensive test cases covering all scenarios

## Database Models (SQLAlchemy 2.x Async)
- PaymentStatus, StripeCustomer, Payment, CreditTransaction
- ProcessedEvent, AdminAction, CreditLedger
- Enhanced User model with credits_balance field

## Service Layer Architecture
- StripeProvider: Webhook processing and validation
- PaymentProvider: Core payment state machine
- Async patterns with proper error handling

## API Endpoints
- Credit admin operations and billing management
- Stripe webhook handlers with signature verification
- Emergency credit management endpoints

## Testing Framework
- test_happy_path.py (6 tests): Successful credit flows
- test_idempotency.py (6 tests): Duplicate prevention
- test_negative_cases.py (10 tests): Error conditions
- Production database testing with PostgreSQL

## Frontend Integration
- Enhanced Stripe checkout with bulletproof metadata
- Multiple user ID validation points
- Comprehensive error handling

## System Analysis
- 85/100 production readiness score
- Comprehensive validation framework
- Complete deployment documentation

## Migration
- 0006_production_credits.py: Complete schema update
- Backwards compatible with existing user data

## Validation & Monitoring
- analyze_credits_system.py: Complete system health check
- validate_tests.py: Test suite validation
- CREDITS_SYSTEM_ANALYSIS.json: Detailed metrics

Ready for production deployment with full observability and testing coverage.

--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -65,6 +65,8 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "psycopg[binary]>=3.2.9",
     "asyncpg>=0.30.0",
+    # Database migration dependencies
+    "alembic>=1.13.0,<2.0.0",
     # Testing dependencies
     "pytest==8.2.2",
     "pytest-asyncio==0.23.7",
