--- a/render.yaml
+++ b/render.yaml
@@ -1,102 +1,26 @@
-# Render Blueprint - BULLETPROOF MIGRATION APPROACH
-# Migration integrated into startup process - 20250902_120207
-
-databases:
-  - name: resume-matcher-db
-    databaseName: resume_matcher
-    user: resume_user
-    plan: free
-    postgresMajorVersion: 15
-
 services:
-  - name: resume-matcher-backend
-    type: web
-    runtime: docker
-
-    # Build from the repo's Dockerfile
+  - type: web
+    name: resume-matcher-backend
+    env: docker
     dockerfilePath: ./Dockerfile
-    dockerContext: .
-
-    # 🚨 BULLETPROOF: NO preDeployCommand - migration runs in startup script
-    # preDeployCommand removed - causes issues in Docker environments
-
-    # Use startup script that runs migration then starts app
-    dockerCommand: >-
-      chmod +x /app/startup_with_migration.sh && /app/startup_with_migration.sh
-
-    healthCheckPath: /healthz
-    autoDeployTrigger: commit
-    plan: free
-    numInstances: 1
-
+    # SCALING FIX: Force single instance until migration is stable
+    instanceCount: 1
+    dockerCommand: ./startup_with_migration.sh
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: resume-matcher-db
           property: connectionString
-      - key: ASYNC_DATABASE_URL
-        fromDatabase:
-          name: resume-matcher-db
-          property: connectionString
-      
-      # Session und Auth
-      - key: SESSION_SECRET_KEY
+      - key: OPENAI_API_KEY
         sync: false
-      - key: NEXTAUTH_SECRET
-        sync: false
-      - key: NEXTAUTH_URL
-        value: https://gojob.ing
-      
-      # Stripe
       - key: STRIPE_SECRET_KEY
         sync: false
       - key: STRIPE_WEBHOOK_SECRET
         sync: false
-      
-      # Stripe price→credits mapping
-      - key: STRIPE_PRICE_SMALL_ID
+      - key: NEXTAUTH_SECRET
         sync: false
-      - key: STRIPE_PRICE_SMALL_CREDITS
-        value: "100"
-      - key: STRIPE_PRICE_MEDIUM_ID
-        sync: false
-      - key: STRIPE_PRICE_MEDIUM_CREDITS
-        value: "500"
-      - key: STRIPE_PRICE_LARGE_ID
-        sync: false
-      - key: STRIPE_PRICE_LARGE_CREDITS
-        value: "1500"
-      
-      # AI configuration
-      - key: LLM_PROVIDER
-        value: openai
-      - key: LLM_MODEL
-        value: gpt-4o-mini
-      - key: LLM_API_KEY
-        sync: false
-      - key: OPENAI_API_KEY
-        sync: false
-      - key: EMBEDDING_PROVIDER
-        value: openai
-      - key: EMBEDDING_MODEL
-        value: text-embedding-3-small
-      - key: EMBEDDING_API_KEY
-        sync: false
-      
-      # Environment
-      - key: ENV
-        value: production
-      - key: LOG_LEVEL
-        value: info
-      - key: PYTHONUNBUFFERED
-        value: "1"
-      - key: PYTHONPATH
-        value: /app/apps/backend
-      - key: ALEMBIC_CONFIG
-        value: /app/apps/backend/alembic.ini
-      - key: ALLOWED_ORIGINS
-        value: '["https://gojob.ing","https://www.gojob.ing","http://localhost:3000"]'
-      
-      # Emergency test mode
-      - key: E2E_TEST_MODE
-        value: "true"
+
+databases:
+  - name: resume-matcher-db
+    databaseName: resume_matcher_db
+    user: resume_user
