--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:memory": "node --max-old-space-size=4096 node_modules/.bin/next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
@@ -12,12 +13,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.2.1",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.501.0",
     "motion": "^12.7.4",
@@ -49,6 +52,7 @@
     "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
+    "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.4",
     "typescript": "^5"
