--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.883.0",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
@@ -30,8 +31,11 @@
     "openai": "^4.58.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.25.76"
   },
   "engines": {
     "node": ">=18 <=22"
