--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,12 +11,13 @@
     "db:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "next": "^15.3.0",
     "@prisma/client": "^5.20.0",
+    "next": "^15.3.0",
     "prisma": "^5.20.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/react": "19.1.12",
     "typescript": "^5.6.0"
   },
   "engines": {
