--- a/render.yaml
+++ b/render.yaml
@@ -1,29 +1,27 @@
 services:
   - type: web
     name: resume-matcher-backend
-    dockerfilePath: ./Dockerfile.cache-bust
-    # Cache-busted build for corrupted Docker layers fix
+    runtime: node
+    rootDir: apps/backend-clean
+    buildCommand: npm ci && npm run build
+    startCommand: npm start
     instanceCount: 1
     healthCheckPath: /api/health
     disk:
       name: ats-data
-      mountPath: /var/data
+      mountPath: /opt/render/project/src/uploads
       sizeGB: 10
     envVars:
+      - key: NODE_ENV
+        value: production
       - key: DATABASE_URL
         fromDatabase:
           name: resume-matcher-db
           property: connectionString
-      - key: OPENAI_API_KEY
+      - key: ADMIN_PASSWORD
         sync: false
-      - key: NEXTAUTH_SECRET
-        sync: false
-      - key: FILES_DIR
-        value: /var/data
-      - key: ADMIN_TOKEN
-        value: change-me
-      - key: MAX_UPLOAD_MB
-        value: 20
+      - key: UPLOAD_DIR
+        value: /opt/render/project/src/uploads
 
 databases:
   - name: resume-matcher-db
