--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "next": "^15.3.0",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5.6.0"
   },
   "engines": {
