--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,13 @@
 services:
   - type: web
-    name: resume-matcher-backend
+    name: resume-matcher-clean
     runtime: node
     rootDir: apps/backend-clean
     buildCommand: npm ci && npm run build
     startCommand: npm start
     instanceCount: 1
     healthCheckPath: /api/health
+    autoDeploy: true
     disk:
       name: ats-data
       mountPath: /opt/render/project/src/uploads
