Fix: Render build npm ci error
- Added package-lock.json to apps/backend-clean/
- Changed render.yaml buildCommand: npm install instead of npm ci
- Changed Dockerfile: npm install instead of npm ci
- Resolves Docker build failure with missing lockfile

--- a/apps/backend-clean/Dockerfile
+++ b/apps/backend-clean/Dockerfile
@@ -10,7 +10,7 @@ COPY package*.json ./
 COPY prisma ./prisma/
 
 # Install dependencies
-RUN npm ci --omit=dev
+RUN npm install --omit=dev
 
 # Generate Prisma Client
 RUN npx prisma generate
