Fix: Render pre-deploy command for Prisma migrations
- Added preDeployCommand: npx prisma migrate deploy to render.yaml
- Created Prisma migration files for uploads table schema
- Added migration_lock.toml for PostgreSQL provider
- Removes Python/Alembic pre-deploy error (wrong runtime)
- Next.js build completed successfully: ✓ Build completed in 58.4s

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     rootDir: apps/backend-clean
     buildCommand: npm install && npm run build
     startCommand: npm start
+    preDeployCommand: npx prisma migrate deploy
     instanceCount: 1
     healthCheckPath: /api/health
     autoDeploy: true
